<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_favourite"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_dashboard" />
    </group>

    <group
        android:id="@+id/group_features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@mipmap/ic_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_diary"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/nav_weight"
            android:icon="@mipmap/ic_weight"
            android:title="@string/menu_weight" />
    </group>

    <group
        android:id="@+id/group_app"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about_app" />
    </group>

</menu>